appId: com.revenuecat.automatedsdktests
---
- launchApp
- extendedWaitUntil:
    visible: "Test Cases"
    timeout: 15000
- assertVisible: "Purchase through paywall"
- tapOn: "Purchase through paywall"
- extendedWaitUntil:
    visible: "Entitlements: none"
    timeout: 15000
- extendedWaitUntil:
    visible: "^Purchase$"
    timeout: 30000
